# embla_controller

./: CMakeLists.txt  README.md  embla_controller.xml  map_locations.md  package.xml
bringup/config/: ekf.yaml  embla_controllers.yaml  embla_controllers_odom.yaml  mapper_params_online_async.yaml
bringup/launch/: embla.launch.py  sim_embla.launch.py
config/: ekf.yaml  ekf_test.yaml  embla_controllers.yaml  embla_controllers_odom.yaml  nav2_localization.yaml  nav2_locnav_params.yaml  nav2_navigation.yaml  navigate_with_replanning_bt.xml  slam_toolbox_localization.yaml
description/launch/: gazebo.launch.py  view_robot.launch.py
description/ros2_control/: embla.ros2_control.xacro
description/urdf/: embla.gazebo.xacro  embla.ros2_control.xacro  embla.urdf.xacro  embla_description.urdf.xacro  imu.xacro  lidar.xacro  macros.xacro  materials.xacro  wheel.xacro
hardware/: embla_system.cpp
hardware/include/embla_controller/: embla_system.hpp
hardware/include/roboclaw/: roboclaw_driver.h
hardware/roboclaw/: roboclaw_driver.cpp
launch/: embla.launch.py  nav2.launch.py  nav2_loc.launch.py  nav2_locnav.launch.py  nav2_nav.launch.py  rviz.launch.py  sim_embla.launch.py
maps/: save.pgm  save.yaml  serial.data
rviz/: embla.rviz  embla_view.rviz
src/: embla_system.cpp
src/include/embla_controller/: embla_system.hpp
src/roboclaw/: roboclaw_driver.cpp
