<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>embla_controller</name>
  <version>0.1.0</version>
  <description>ROS 2 package for control of the JWR-02 Embla robot</description>
  <maintainer email="jens@jwrobotics.com">Jens Willy Johannsen</maintainer>
  <license>MIT</license>
  <author email="jens@jwrobotics.com">Jens Willy Johannsen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Next two are only used for GUI
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>